<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:background="@drawable/bg_container_star"
        android:clickable="false"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/container_star"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:src="@drawable/ic_star"
            app:layout_constraintDimensionRatio="271:107"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/app_font_400"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_12sdp"
            android:text="@string/star_rate"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_star" />


        <TextView
            android:id="@+id/btn_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rate_five_star"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:fontFamily="@font/app_font_700"
            android:text="@string/five_rate"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_status" />


        <TextView
            android:id="@+id/btn_later"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_rate_later"
            android:fontFamily="@font/app_font_700"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/later"
            android:textColor="#57519E"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_rate" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


