<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/ic_background_app"
    tools:context=".ui.main.PrankRecordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/banner_ads"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:src="@drawable/ic_back"
                app:layout_constraintDimensionRatio="71:61"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_select_translation_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:fontFamily="@font/app_font_700"
                android:paddingHorizontal="@dimen/_12sdp"
                android:text="@string/select_translation_mode"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_back" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_dog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:gravity="center"
                android:padding="@dimen/_6sdp"
                app:layout_constraintEnd_toStartOf="@id/container_cat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_select_translation_mode">

                <ImageView
                    android:id="@+id/imv_dog"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@drawable/bg_selected_item_prank"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/ic_dog_record"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <FrameLayout
                    android:id="@+id/layout_overlay_1"
                    android:layout_width="@dimen/_47sdp"
                    android:layout_height="@dimen/_47sdp"
                    android:background="@drawable/bg_overlay_item_prank"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_6sdp"
                app:layout_constraintEnd_toStartOf="@id/container_pig"
                app:layout_constraintStart_toEndOf="@id/container_dog"
                app:layout_constraintTop_toTopOf="@id/container_dog">


                <ImageView
                    android:id="@+id/imv_cat"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/ic_cat_record"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <FrameLayout
                    android:id="@+id/layout_overlay_2"
                    android:layout_width="@dimen/_47sdp"
                    android:layout_height="@dimen/_47sdp"
                    android:background="@drawable/bg_overlay_item_prank"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_pig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_6sdp"
                app:layout_constraintEnd_toStartOf="@id/container_lion"
                app:layout_constraintStart_toEndOf="@id/container_cat"
                app:layout_constraintTop_toTopOf="@id/container_dog">

                <ImageView
                    android:id="@+id/imv_pig"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/ic_pig_record"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <FrameLayout
                    android:id="@+id/layout_overlay_3"
                    android:layout_width="@dimen/_47sdp"
                    android:layout_height="@dimen/_47sdp"
                    android:background="@drawable/bg_overlay_item_prank"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_lion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_6sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/container_pig"
                app:layout_constraintTop_toTopOf="@id/container_dog">

                <ImageView
                    android:id="@+id/imv_lion"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/ic_lion_record"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <FrameLayout
                    android:id="@+id/layout_overlay_4"
                    android:layout_width="@dimen/_47sdp"
                    android:layout_height="@dimen/_47sdp"
                    android:background="@drawable/bg_overlay_item_prank"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/record_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:fontFamily="@font/app_font_700"
                android:paddingHorizontal="@dimen/_12sdp"
                android:text="@string/click_to_start_recording"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_dog" />

            <ImageView
                android:id="@+id/btn_record"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_12sdp"
                android:src="@drawable/ic_record"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/record_instruction"
                app:layout_constraintWidth_percent="0.3" />

            <TextView
                android:id="@+id/recording"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/app_font_700"
                android:text="@string/recording"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_record" />


            <TextView
                android:id="@+id/play_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:fontFamily="@font/app_font_700"
                android:gravity="center"
                android:text="@string/play_instruction"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recording" />

            <ImageView
                android:id="@+id/btn_play"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_12sdp"
                android:src="@drawable/ic_play"
                android:visibility="gone"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/play_instruction"
                app:layout_constraintWidth_percent="0.3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/banner_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>